<?xml version="1.0" encoding="utf-8"?>

<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.movingmover.oem.movingmover.login.LoginActivity">

    <EditText
        android:id="@+id/email_edit"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        style="@style/EditText"
        app:layout_constraintHorizontal_bias="0"
        app:layout_constraintVertical_bias="0.0"
        android:hint="@string/email"
        android:drawableLeft="@drawable/login_name"/>

    <EditText
        android:id="@+id/first_name_edit"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        style="@style/EditText"
        app:layout_constraintHorizontal_bias="0"
        app:layout_constraintVertical_bias="0.14"
        android:hint="@string/first_name"
        android:drawableLeft="@drawable/login_name" />

    <EditText
        android:id="@+id/last_name_edit"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        style="@style/EditText"
        app:layout_constraintHorizontal_bias="0"
        app:layout_constraintVertical_bias="0.28"
        android:hint="@string/last_name"
        android:drawableLeft="@drawable/login_name" />


    <EditText
        android:id="@+id/password_edit"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        style="@style/EditText"
        app:layout_constraintHorizontal_bias="0"
        app:layout_constraintVertical_bias="0.42"
        android:inputType="textPassword"
        android:hint="@string/login_password"
        android:drawableLeft="@drawable/key"/>

    <Button
        android:id="@+id/validate_account_button"
        android:layout_width="160dp"
        android:layout_height="70dp"
        android:background="@drawable/button_selector"
        android:gravity="center"
        android:text="@string/validate_account"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.05"
        app:layout_constraintVertical_bias="0.80"/>

    <Button
        android:id="@+id/back_button"
        android:layout_width="160dp"
        android:layout_height="70dp"
        android:background="@drawable/button_selector_red"
        android:gravity="center"
        android:text="@string/back"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.95"
        app:layout_constraintVertical_bias="0.80"/>

</android.support.constraint.ConstraintLayout>