<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.movingmover.oem.movingmover.login.LoginActivity">

    <EditText
        android:id="@+id/email_edit"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        style="@style/EditText"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintVertical_bias="0.1"
        android:hint="@string/email"
        android:drawableLeft="@drawable/login_name"/>

    <Button
        android:id="@+id/confirm_button"
        android:layout_width="160dp"
        android:layout_height="70dp"
        android:background="@drawable/button_selector"
        android:gravity="center"
        android:text="@string/confirm"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.05"
        app:layout_constraintVertical_bias="0.45"/>

    <Button
        android:id="@+id/back_button"
        android:layout_width="160dp"
        android:layout_height="70dp"
        android:background="@drawable/button_selector_red"
        android:gravity="center"
        android:text="@string/back"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.95"
        app:layout_constraintVertical_bias="0.45"/>

</android.support.constraint.ConstraintLayout>